# ecommerce-cohort-funnel-analysis

./: .gitattributes  .gitignore  README.md  pyproject.toml
notebooks/: 01_funnel_cohort_ltv.ipynb
sql/: 00_schema.sql  01_funnel_conversion.sql  02_cohort_retention.sql  03_ltv_and_recommendation.sql
src/: build_db.py  confidence.py  generator.py  run_queries.py
tests/: test_confidence.py  test_generator.py  test_queries.py
